rspec-distrib/features/fixtures/specs/syntax_error/bar_spec.rb
RSpec.describe 'Bar' do
  it { expect(2).to eq 2 }
  it { expect(3).to eq 3 }
  a = # syntax error
end
